<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activites.ClassementActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/rectangle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/classement"
                    android:layout_marginTop="-80dp"
                    android:textSize="30sp"
                    android:textColor="@color/couleur_principale_blanc"
                    android:textStyle="bold"
                    android:letterSpacing="@dimen/espace_caractere_titre"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hiragana"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textColor="@color/couleur_principale_rouge"
                    android:textAlignment="center"
                    />

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/tableauHiragana"
                    android:layout_width="@dimen/largeur_tableau_classement"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/couleur_gris_fonce">

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="1dp"
                            android:background="@drawable/tableautitre">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="Pseudo"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:textColor="@color/couleur_principale_noir"
                                android:padding="5dp" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="1dp"
                            android:background="@drawable/tableautitre">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="Score"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:textColor="@color/couleur_principale_noir"
                                android:padding="5dp" />
                        </FrameLayout>
                    </TableRow>
                </TableLayout>

                <TextView
                    android:id="@+id/texteScoreHiragana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/katakana"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textColor="@color/couleur_principale_rouge"
                    android:textAlignment="center"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="20dp"
                    />

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/tableauKatakana"
                    android:layout_width="@dimen/largeur_tableau_classement"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/couleur_gris_fonce" >

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="1dp"
                            android:background="@drawable/tableautitre">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="Pseudo"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:textColor="@color/couleur_principale_noir"
                                android:padding="5dp" />

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="1dp"
                            android:background="@drawable/tableautitre" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="Score"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:textColor="@color/couleur_principale_noir"
                                android:padding="5dp" />

                        </FrameLayout>
                    </TableRow>
                </TableLayout>

                <TextView
                    android:id="@+id/texteScoreKatakana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kana"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textColor="@color/couleur_principale_rouge"
                    android:textAlignment="center"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="20dp"
                    />

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/tableauKana"
                    android:layout_width="@dimen/largeur_tableau_classement"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:background="#0079D6">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/couleur_gris_fonce">

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="1dp"
                            android:background="@drawable/tableautitre">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="Pseudo"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:textColor="@color/couleur_principale_noir"
                                android:padding="5dp" />

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="1dp"
                            android:background="@drawable/tableautitre">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="Score"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:textColor="@color/couleur_principale_noir"
                                android:padding="5dp" />
                        </FrameLayout>
                    </TableRow>
                </TableLayout>

                <TextView
                    android:id="@+id/texteScoreKana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="10dp"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/boutonRetour"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Retour"
                android:width="110dp"
                android:layout_marginTop="50dp"
                />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>